# kitchensink-firmware

./: .gitignore  EVENT_FORMAT.md  PASSWORD_SUFFIX.md  README.md
devices/arcadestick/: arcadestick.ino  build.sh
devices/arcadestick_usb/: arcadestick_usb.ino  build.sh
devices/feather/: build.sh  feather.ino
devices/teensy3-prototype/: build.sh  teensy3-prototype.ino  upload.sh
libraries/kitchensink-core/: library.properties
libraries/kitchensink-core/src/: actionprocessor.cpp  config.h  defaultprofile.cpp  eventmanager.cpp  eventmanager.h  eventrecorder.cpp  globalconfig.h  keyboardstateutil.cpp  keysource.cpp  keysource.h  layerprocessor.cpp  layerprocessor.h  macro.h  macrodatapool.h  macroprocessor.cpp  macroprocessor.h  multikeyprocessor.cpp  multikeyprocessor.h
libraries/kitchensink-core/src/crypto/: aesdecryptcontext.cpp  aesdecryptcontext.h  aesencryptcontext.cpp  aesencryptcontext.h  cryptoinstream.cpp  cryptoinstream.h  cryptooutstream.cpp  cryptooutstream.h  cryptoutil.cpp  cryptoutil.h  entropypool.cpp  hmaccontext.cpp  hmaccontext.h
libraries/kitchensink-core/src/data/: keymap.cpp
libraries/kitchensink-core/src/event/: compositeeventsource.h  delayevent.cpp  delayevent.h  eventbuffer.cpp  eventsource.h
libraries/kitchensink-core/src/hardware/: compositekeyhardware.h  cpuutil.cpp  cpuutil.h  debounce.h  keyboardplate.h  keyhardware.h  keyhardwareeventdispatcher.h
libraries/kitchensink-core/src/serialize/: eventserializer.cpp  iniformat.h  serializer.cpp  serializer.h
libraries/kitchensink-core/src/storage/: storage.cpp  storage.h
libraries/kitchensink-core/src/timer/: timermanager.cpp  timermanager.h  timertypes.cpp  timertypes.h  timerutil.cpp  timerutil.h
libraries/kitchensink-core/src/types/: circularbuffer.h  dataref.h  strbuf.h  stroutstream.cpp  stroutstream.h  strref.cpp  strref.h  strutil.cpp  strutil.h
libraries/kitchensink-core/src/ui/: autorepeat.cpp  buttonwidget.cpp  combowidget.cpp  cryptoscreen.cpp  cryptoscreen.h  editmacroscreen.cpp  editmacroscreen.h  entrywidget.cpp  entrywidget.h  evententrywidget.cpp  evententrywidget.h  eventstreamscreen.cpp  globalconfigscreen.cpp  globalconfigscreen.h  homeledwidget.cpp  homeledwidget.h  hstackwidget.cpp  initsecuremacroscreen.cpp  initsecuremacroscreen.h  keylocationwidget.cpp  keylocationwidget.h  labelwidget.cpp  layerconfigscreen.cpp  layerconfigscreen.h  menudefinitions.cpp  menuwidget.cpp  multiconfigscreen.cpp  multiconfigscreen.h  numberentrywidget.cpp  numberentrywidget.h  passwordentrywidget.cpp  passwordentrywidget.h  recordmacroscreen.h  screenmanager.cpp  screenmanager.h  smartconfigscreen.cpp  smartconfigscreen.h  statusscreen.cpp  (+7 more)
libraries/kitchensink-core/tests/: CMakeLists.txt  Makefile  circularbuffer.t.cpp  strbuf.t.cpp  strinstream.t.cpp  stroutstream.t.cpp  strref.t.cpp
libraries/kitchensink-core/tests/crypto/: aescontext.t.cpp  crypto.t.cpp  cryptoinstream.t.cpp  cryptoutil.t.cpp  hmaccontext.t.cpp
libraries/kitchensink-core/tests/hardware/: compositekeyhardware.t.cpp  cpuutil.t.cpp  debounce.t.cpp  keyboardplate.t.cpp  keyhardwareevent.t.cpp  keyhardwareeventhandler.t.cpp
libraries/kitchensink-core/tests/scripts/: bin2hex.py
libraries/kitchensink-core/tests/serialize/: eventserializer.t.cpp  iniformat.t.cpp
libraries/kitchensink-core/tests/testutil/: testutil.cpp  testutil.h
libraries/kitchensink-core/tests/timer/: timer.t.cpp  timermanager.t.cpp  timerutil.t.cpp
libraries/kitchensink-core/tests/types/: arrayobjectsource.t.cpp  arrayoutstream.t.cpp  arrayutil.t.cpp  bititerator.t.cpp  bitmask2d.t.cpp  dataref.t.cpp  datarefinstream.t.cpp  filterindex.t.cpp  generatedobjectsource.t.cpp  indexediterator.t.cpp  kvpair.t.cpp  mappedobjectsource.t.cpp  mutabledataref.t.cpp  orderedcircularbuffer.t.cpp  range.t.cpp  strbuf.t.cpp  strinstream.t.cpp  stroutstream.t.cpp  strref.t.cpp
libraries/kitchensink-core/tools/: CMakeLists.txt  Makefile  aesdecrypt.cpp  aesencrypt.cpp  fileinstream.cpp  fileinstream.h  fileoutstream.cpp  fileoutstream.h
libraries/kitchensink-drivers-adafruit/: library.properties
libraries/kitchensink-drivers-generic/src/: arduinocpudriver.cpp  arduinocpudriver.h  arduinousbkeyboard.cpp  gpiokeyset.h  i2ckeymatrix.cpp  seriallogger.cpp
libraries/kitchensink-drivers-teensy/: library.properties
libraries/kitchensink-drivers-teensy/src/: teensycpudriver.cpp  teensycpudriver.h
utils/: gen_password_suffix.py
